[tool.poetry]
name = "aoc-2023"
version = "2023.12.01"
description = "A Python repo with my solutions to Advent of Code 2023"
authors = ["Automne von Einzbern <spam@automne.me>"]
license = "ISC"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
pylint = "^3.0.2"
commitizen = "^3.12.0"
ipykernel = "^6.27.1"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
